--- a/src/app/shared/policy/policy.component.html
+++ b/src/app/shared/policy/policy.component.html
@@ -1,13 +1,187 @@
 <section>
   <h1>Privacy Policy</h1>
+  <p>
+    Personal data (usually referred to just as „data“ below) will only be
+    processed by us to the extent necessary and for the purpose of providing a
+    functional and user-friendly website, including its contents, and the
+    services offered there.
+  </p>
+  <p>
+    Per Art. 4 No. 1 of Regulation (EU) 2016/679, i.e. the General Data
+    Protection Regulation (hereinafter referred to as the „GDPR“), „processing“
+    refers to any operation or set of operations such as collection, recording,
+    organization, structuring, storage, adaptation, alteration, retrieval,
+    consultation, use, disclosure by transmission, dissemination, or otherwise
+    making available, alignment, or combination, restriction, erasure, or
+    destruction performed on personal data, whether by automated means or not.
+  </p>
+  <p>
+    The following privacy policy is intended to inform you in particular about
+    the type, scope, purpose, duration, and legal basis for the processing of
+    such data either under our own control or in conjunction with others. We
+    also inform you below about the third-party components we use to optimize
+    our website and improve the user experience which may result in said third
+    parties also processing data they collect and control.
+  </p>
+  <br />
+  <p>Our privacy policy is structured as follows:</p>
+  <p>
+    I. Information about us as controllers of your data<br />II. The rights of
+    users and data subjects<br />III. Information about the data processing
+  </p>
+  <br />
+  <h3>I. Information about us as controllers of your data</h3>
+  <p>
+    The party responsible for this website (the „controller“) for purposes of
+    data protection law is:
+  </p>
+  <p>
+    Max Mustermann<br />
+    Musterstraße 1<br />
+    12345 Musterhausen<br />
+    Telefon: +49 11 2222222222<br />
+    E-Mail: kontakt&#64;max-mustermann.de
+  </p>
+  <br />
+  <h3>II. The rights of users and data subjects</h3>
+  <p>
+    With regard to the data processing to be described in more detail below,
+    users and data subjects have the right
+  </p>
+  <ul>
+    <li>
+      to confirmation of whether data concerning them is being processed,
+      information about the data being processed, further information about the
+      nature of the data processing, and copies of the data (cf. also Art. 15
+      GDPR);
+    </li>
+    <li>
+      to correct or complete incorrect or incomplete data (cf. also Art. 16
+      GDPR);
+    </li>
+    <li>
+      to the immediate deletion of data concerning them (cf. also
+      <a
+        href="https://dejure.org/gesetze/DSGVO/17.html"
+        title='Art. 17 DSGVO: Recht auf Löschung ("Recht auf Vergessenwerden")'
+        rel="nofollow noopener"
+        target="_blank"
+        >Art. 17 DSGVO</a
+      >), or, alternatively, if further processing is necessary as stipulated in
+      Art. 17 Para. 3 GDPR, to restrict said processing per Art. 18 GDPR;
+    </li>
+    <li>
+      to receive copies of the data concerning them and/or provided by them and
+      to have the same transmitted to other providers/controllers (cf. also Art.
+      20 GDPR);
+    </li>
+    <li>
+      to file complaints with the supervisory authority if they believe that
+      data concerning them is being processed by the controller in breach of
+      data protection provisions (see also Art. 77 GDPR).
+    </li>
+  </ul><br />
+  <p>
+    In addition, the controller is obliged to inform all recipients to whom it
+    discloses data of any such corrections, deletions, or restrictions placed on
+    processing the same per Art. 16, 17 Para. 1, 18 GDPR. However, this
+    obligation does not apply if such notification is impossible or involves a
+    disproportionate effort. Nevertheless, users have a right to information
+    about these recipients.
+  </p>
+  <p>
+    <strong
+      >Likewise, under Art. 21 GDPR, users and data subjects have the right to
+      object to the controller’s future processing of their data pursuant to
+      Art. 6 Para. 1 lit. f) GDPR. In particular, an objection to data
+      processing for the purpose of direct advertising is permissible.</strong
+    >
+  </p><br />
+  <h3>III. Information about the data processing</h3>
+  <p>
+    Your data processed when using our website will be deleted or blocked as
+    soon as the purpose for its storage ceases to apply, provided the deletion
+    of the same is not in breach of any statutory storage obligations or unless
+    otherwise stipulated below.
+  </p><br />
+  <h4>
+    Customer account/registration
+  </h4>
+  <p>
+    If you create a customer account with us via our website, we will use the
+    data you entered during registration (e.g. your name, your address, or your
+    email address) exclusively for services leading up to your potential
+    placement of an order or entering some other contractual relationship with
+    us, to fulfill such orders or contracts, and to provide customer care (e.g.
+    to provide you with an overview of your previous orders or to be able to
+    offer you a wishlist function). We also store your IP address and the date
+    and time of your registration. This data will not be transferred to third
+    parties.
+  </p>
+  <p>
+    During the registration process, your consent will be obtained for this
+    processing of your data, with reference made to this privacy policy. The
+    data collected by us will be used exclusively to provide your customer
+    account.
+  </p>
+  <p>
+    If you give your consent to this processing, Art. 6 Para. 1 lit. a) GDPR is
+    the legal basis for this processing.
+  </p>
+  <p>
+    If the opening of the customer account is also intended to lead to the
+    initiation of a contractual relationship with us or to fulfill an existing
+    contract with us, the legal basis for this processing is also Art. 6 Para. 1
+    lit. b) GDPR.
+  </p>
+  <p>
+    You may revoke your prior consent to the processing of your personal data at
+    any time under Art. 7 Para. 3 GDPR with future effect. All you have to do is
+    inform us that you are revoking your consent.
+  </p>
+  <p>
+    The data previously collected will then be deleted as soon as processing is
+    no longer necessary. However, we must observe any retention periods required
+    under tax and commercial law.
+  </p><br />
+  <h4>Server data</h4>
+  <p>
+    For technical reasons, the following data sent by your internet browser to
+    us or to our server provider will be collected, especially to ensure a
+    secure and stable website: These server log files record the type and
+    version of your browser, operating system, the website from which you came
+    (referrer URL), the webpages on our site visited, the date and time of your
+    visit, as well as the IP address from which you visited our site.
+  </p>
+  <p>
+    The data thus collected will be temporarily stored, but not in association
+    with any other of your data.
+  </p>
+  <p>
+    The basis for this storage is Art. 6 Para. 1 lit. f) GDPR. Our legitimate
+    interest lies in the improvement, stability, functionality, and security of
+    our website.
+  </p>
+  <p>
+    The data will be deleted within no more than seven days, unless continued
+    storage is required for evidentiary purposes. In which case, all or part of
+    the data will be excluded from deletion until the investigation of the
+    relevant incident is finally resolved.
+  </p><br />
 
-  <div class="text-section">
-    <h2>Allgemeine Hinweise</h2>
-    <p>Die folgenden Hinweise geben einen einfachen Überblick darüber, was mit Ihren personenbezogenen Daten passiert, wenn Sie diese Website besuchen. Personenbezogene Daten sind alle Daten, mit denen Sie persönlich identifiziert werden können. Ausführliche Informationen zum Thema Datenschutz entnehmen Sie unserer unter diesem Text aufgeführten Datenschutzerklärung.</p>
-  </div>
-
-  <div class="text-section">
-    <h2>Datenschutz</h2>
-    <p><i>Die Betreiber dieser Seiten nehmen den Schutz Ihrer persönlichen Daten NICHT sehr ernst.</i></p>
-  </div>
+  <p>
+    <a
+      href="https://www.generator-datenschutzerklärung.de"
+      target="_blank"
+      rel="noopener"
+      >Model Data Protection Statement</a
+    >
+    for
+    <a
+      href="https://www.bewertung-löschen24.de"
+      rel="nofollow noopener"
+      target="_blank"
+      >Anwaltskanzlei Weiß &amp; Partner</a
+    >
+  </p>
 </section>
