"conten max fixes"

--- a/src/app/main/login/signup/signup.component.html
+++ b/src/app/main/login/signup/signup.component.html
@@ -1,4 +1,4 @@
-<section>
+<section class="content_max">
   <div class="header-section">
     <img class="logo" src="assets/img/join_logo.svg" alt="Logo" />
   </div>
