--- a/src/app/main/content/contacts/contacts.component.html
+++ b/src/app/main/content/contacts/contacts.component.html
@@ -1,4 +1,4 @@
-<section>
+<section class="content_max">
   @if(!contactService.selectedContact) {
   <div class="new-contact-mobile-icon" (click)="openOverlay('add')">
     <img src="assets/img/icons/person_add_icon.svg" alt="" />
