--- a/src/app/main/content/summary/summary.component.html
+++ b/src/app/main/content/summary/summary.component.html
@@ -1,4 +1,4 @@
-<section>
+<section  class="content_max">
   <div class="headline">
     <h1>Join 360</h1>
     <div class="border-blue horizontal"></div>
