--- a/src/app/main/login/login.component.html
+++ b/src/app/main/login/login.component.html
@@ -1,4 +1,4 @@
-<section [ngClass]="{ 'page-loaded': isPageLoaded }">
+<section class="content_max" [ngClass]="{ 'page-loaded': isPageLoaded }">
   <img
     class="animated-logo"
     [ngClass]="{ 'logo-final-position': isLogoShifted }"
