--- a/src/app/shared/help/help.component.html
+++ b/src/app/shared/help/help.component.html
@@ -1,4 +1,4 @@
-<section>
+<section  class="content_max">
     <div class="help-header">
         <h1>Help</h1>
         <a (click)="selectItem(navigationService.getSelectedItem())"></a>
