--- a/src/app/shared/policy/policy.component.html
+++ b/src/app/shared/policy/policy.component.html
@@ -1,4 +1,4 @@
-<section>
+<section  class="content_max">
   <h1>Privacy Policy</h1>
   <p>
     Personal data (usually referred to just as „data“ below) will only be
