--- a/src/app/main/content/summary/summary.component.scss
+++ b/src/app/main/content/summary/summary.component.scss
@@ -2,7 +2,7 @@
 section {
   width: 100%;
   height: calc(100vh - 91px);
-  box-shadow: 4px 4px 6px 0px rgba(0, 0, 0, 0.1) inset;
+  // box-shadow: 4px 4px 6px 0px rgba(0, 0, 0, 0.1) inset;
   padding: 0 70px 8px;
   overflow-y: auto;
 
