--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -9,6 +9,7 @@ section {
     background-color: $white;
     // position: relative;
     min-height: 91px;
+    box-shadow: 0px 4px 6px 0px rgba(0, 0, 0, 0.1);
 }
 
 .parent {
