--- a/src/app/main/content/content.component.scss
+++ b/src/app/main/content/content.component.scss
@@ -28,7 +28,7 @@ app-help {
   max-height: calc(100vh - 91px);
   overflow-y: auto;
 
-  box-shadow: 0px 4px 6px 0px rgba($black, 0.1) inset;
+  // box-shadow: 0px 4px 6px 0px rgba($black, 0.1) inset;
 }
 
 .active {
