--- a/src/app/main/content/contacts/overlay/overlay.component.html
+++ b/src/app/main/content/contacts/overlay/overlay.component.html
@@ -59,8 +59,7 @@
             alt="Name Icon"
           />
         </div>
-        @if ( (nameField.invalid && (nameField.touched ||
-        contactForm.submitted)) || isValidName) {
+        @if ( (nameField.invalid && (nameField.touched)) || isValidName) {
         <p class="error-message">Please use at least 3 letters!</p>
         } @else {
         <p></p>
@@ -83,8 +82,7 @@
             alt="Email Icon"
           />
         </div>
-        @if ((emailField.invalid && (emailField.touched ||
-        contactForm.submitted)) || isValidEmail) {
+        @if ((emailField.invalid && (emailField.touched)) || isValidEmail) {
         <p class="error-message">Please use a valid email!</p>
         } @else {
         <p></p>
@@ -107,8 +105,7 @@
             alt="Phone Icon"
           />
         </div>
-        @if ((phoneField.invalid && (phoneField.touched ||
-        contactForm.submitted)) || isValidPhone) {
+        @if ((phoneField.invalid && (phoneField.touched)) || isValidPhone) {
         <p class="error-message">
           Please use + or 0 at the beginning and 5-18 numbers! (Spaces are
           included)
