--- a/src/app/main/content/add-task/add-task.component.scss
+++ b/src/app/main/content/add-task/add-task.component.scss
@@ -341,6 +341,7 @@ form {
       height: 48px;
       width: 100%;
       padding-left: 16px;
+      padding-right: 80px;
 
       &::placeholder {
         color: $light_gray;
@@ -596,6 +597,7 @@ form {
       @include dFlex($jc: space-between);
       min-height: 29px;
       position: relative;
+      padding-right: 80px;
 
       &:hover {
         background-color: $hover_gray;
@@ -605,7 +607,7 @@ form {
     span {
       color: black;
       display: inline-block;
-      margin: 0;
+      margin: 0;      
     }
 
     padding: 5px;
